add switch done end-point
