# swagger.json
@@ -205,7 +205,7 @@
           }
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "Success",
             "content": {
               "application/json": {
@@ -254,6 +254,69 @@
             "description": "Id of task"
           }
         ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/deleteTaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Validation Error",
+            "content": {}
+          },
+          "401": {
+            "description": "UNAUTHORIZED",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/UNAUTHORIZED"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/taskNotFound"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/tasks/{taskId}/done": {
+      "patch": {
+        "summary": "Update status done of task",
+        "tags": ["Tasks"],
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Id of task"
+          }
+        ],
+        "requestBody": {
+          "description": "Task body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/updateStatusTaskRequest"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Success",
@@ -445,6 +508,17 @@
             "type": "boolean",
             "example": false,
             "description": "Is done? Default: false"
+          }
+        }
+      },
+      "updateStatusTaskRequest": {
+        "type": "object",
+        "required": ["done"],
+        "properties": {
+          "done": {
+            "type": "boolean",
+            "example": false,
+            "description": "Is done?"
           }
         }
       },
